--- a/app/globals.css
+++ b/app/globals.css
@@ -108,7 +108,7 @@ footer {
   margin-right: var(--sidebar-width-closed);
   transition: 0.3s ease;
   width: calc(100% - var(--sidebar-width-closed));
-  max-height: 50vh;
+  /* max-height: 50vh; */
 }
 
 body.sidebar-open .content-container {
@@ -122,7 +122,7 @@ html,
 body {
   max-width: 100vw;
 
-  /* height: 100vw; */
+  max-height: 100vh;
   /* overflow-x: hidden; */
 }
 
