--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -2,10 +2,13 @@
   background-color: #1a202c;
   color: #f7fafc;
   position: fixed;
+  /* position: absolute; */
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 99999;
+  margin: 0;
+  padding: 0;
 }
 
 .footer-container {
