--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap");
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -11,30 +12,24 @@
   /* --background-start-rgb: 214, 219, 220; */
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -44,8 +39,14 @@
   /* --nav-height: 50px; */
   --sidebar-width-closed: 60px;
   /* --sidebar-width-open: 110px;  V1*/
-  --sidebar-width-open: 125px; /* V2 */
+  --sidebar-width-open: 125px;
+  /* V2 */
+
+  --input-border: #e2e2e2;
+  --main-background-color: #ECE6F7;
+  --secondary-background-color: #F7F5FA;
 }
+
 /* 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -145,8 +146,19 @@ a {
   text-decoration: none;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
+.rtl-text {
+  direction: rtl;
+  unicode-bidi: plaintext;
+}
+
+.btn {
+  font-family: "Heebo", sans-serif;
+  font-size: clamp(0.7rem, 2vw, 1rem);
+  padding: 0.8em 3.5em;
+  border-radius: 2em;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  letter-spacing: 1.15px;
+  transition: background-color 0.3s ease;
+  white-space: nowrap;
+  cursor: pointer;
+}
